# Raytracer-v2.0

./: .gitignore  CMakeLists.txt  README.md  main.c
config/: lights.txt  objects.txt  settings.txt
config/cine/: lights.txt  lights2.txt  objects.txt  settings.txt
config/t/: arrival.avs  floor.avs  lalaland.avs  moana.avs  moonlight.avs  oscarr.avs  oscars.avs  piper.avs  zootopia.avs
scene/object/: cone.c  cone.h  cylinder.c  cylinder.h  disc.c  disc.h  light.c  light.h  objects.c  objects.h  polygon.c  polygon.h  sphere.c  sphere.h
scene/raytracer/: raytracer.c  raytracer.h
util/io/: fileUtils.c  fileUtils.h
util/math/: mathUtils.c  mathUtils.h
util/struct/: sharedStructs.h
